Fix SonarLint issues